--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -21,25 +21,36 @@
 
 
 # Use 256 colors
-set -g default-terminal 'xterm-256color'
-set -g terminal-overrides 'xterm:colors=256'
+# set -g default-terminal 'xterm-256color'
+# set -g terminal-overrides 'xterm:colors=256'
+# set -g default-terminal 'tmux-256color'
+set -g default-terminal 'mintty'
+set -s extended-keys always
+set -as terminal-features 'extkeys'
 
 # Select active pane by vim-like key bind
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
+# bind h select-pane -L
+# bind j select-pane -D
+# bind k select-pane -U
+# bind l select-pane -R
+bind -n M-h select-pane -L
+bind -n M-j select-pane -D
+bind -n M-k select-pane -U
+bind -n M-l select-pane -R
+
+bind -n M-n if-shell -F '#{<:#{p-4:#{pane_width}},#{p-4:#{e|*|:2,#{pane_height}}}}' 'split-window -v' 'split-window -h'
 
 # Use mouse
 set -g mouse on
 
+set -g prefix C-q
+
 # アクティブなペインと非アクティブなペインで色を変える
-# set -g window-style 'fg=colour22,bg=colour234'
-# set -g window-active-style 'fg=colour46,bg=colour0'
-# 
+# set -g window-style 'bg=colour239'
+# set -g window-active-style 'bg=colour234'
 # set -g pane-border-style  'fg=colour67,bg=colour234'
 # set -g pane-active-border-style 'fg=colour51,bg=colour250'
- 
+
 set -ag terminal-overrides ',*:U8=0'
 
 set -g default-shell "${SHELL}"
@@ -61,4 +72,17 @@ set -w -g window-status-current-style 'fg=#ffffff,bg=#000000'
 set -w -g window-status-style 'fg=#828b93,bg=#2d2d2d'
 # Content of the right part of the status bar.
 set -g status-right ''
+
+
+#-------------
+# Clipboard
+#-------------
+
+# コピーモードをvimキーバインドで
+set-window-option -g mode-keys vi
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "win32yank.exe -i"
+bind p run-shell 'win32yank.exe -o | xargs -0 -I{} tmux set-buffer -- {} && tmux paste-buffer'
+
+# bind -n C-@ ^[[64;5u
 
