--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -24,7 +24,19 @@
 # set -g default-terminal 'xterm-256color'
 # set -g terminal-overrides 'xterm:colors=256'
 # set -g default-terminal 'tmux-256color'
-set -g default-terminal 'mintty'
+if-shell '[ $TERM = mintty ]' {
+    set -g default-terminal 'mintty'
+}
+if-shell '[ $TERM = alacritty ]' {
+    set -g default-terminal 'tmux-256color'
+    set -ag terminal-overrides ',alacritty:RGB'
+}
+if-shell '[ $TERM = xterm-256color ]' {
+    set -g default-terminal 'tmux-256color'
+    set -ag terminal-overrides ',xterm-256color:RGB'
+}
+
+
 set -s extended-keys always
 set -as terminal-features 'extkeys'
 
@@ -38,7 +50,8 @@ bind -n M-j select-pane -D
 bind -n M-k select-pane -U
 bind -n M-l select-pane -R
 
-bind -n M-n if-shell -F '#{<:#{p-4:#{pane_width}},#{p-4:#{e|*|:2,#{pane_height}}}}' 'split-window -v' 'split-window -h'
+bind -n M-n if-shell -F '#{<:#{p-4:#{pane_width}},#{p-4:#{e|*|:2,#{pane_height}}}}' 'split-window -v -c "#{pane_current_path}"' 'split-window -h -c "#{pane_current_path}"'
+bind -n M-m 'new-window'
 
 # Use mouse
 set -g mouse on
@@ -84,5 +97,8 @@ bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "win32yank.exe -i"
 bind p run-shell 'win32yank.exe -o | xargs -0 -I{} tmux set-buffer -- {} && tmux paste-buffer'
 
-# bind -n C-@ ^[[64;5u
+bind-key -n M-K resize-pane -U 1
+bind-key -n M-J resize-pane -D 1
+bind-key -n M-H resize-pane -L 1
+bind-key -n M-L resize-pane -R 1
 
