--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -84,8 +84,7 @@ set -w -g window-status-current-style 'fg=#ffffff,bg=#000000'
 # Inactive window's style.
 set -w -g window-status-style 'fg=#828b93,bg=#2d2d2d'
 # Content of the right part of the status bar.
-set -g status-right ''
-
+set -g status-right '#([ $(cat /sys/class/power_supply/AC1/online) -eq 1 ] && echo -n  || echo -n ; [ -n $(find /sys/class/power_supply/ -name 'BAT*' | head -n 1) ] && echo $(cat $(find /sys/class/power_supply/ -name 'BAT*' | head -n 1)/capacity)% || echo)'
 
 #-------------
 # Clipboard
@@ -102,3 +101,4 @@ bind-key -n M-J resize-pane -D 1
 bind-key -n M-H resize-pane -L 1
 bind-key -n M-L resize-pane -R 1
 
+set -g escape-time 0
