--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -41,10 +41,6 @@ set -s extended-keys always
 set -as terminal-features 'extkeys'
 
 # Select active pane by vim-like key bind
-# bind h select-pane -L
-# bind j select-pane -D
-# bind k select-pane -U
-# bind l select-pane -R
 bind -n M-h select-pane -L
 bind -n M-j select-pane -D
 bind -n M-k select-pane -U
@@ -57,6 +53,8 @@ bind -n M-m 'new-window'
 set -g mouse on
 
 set -g prefix C-q
+bind-key C-q send-prefix
+setw -g aggressive-resize on
 
 # アクティブなペインと非アクティブなペインで色を変える
 # set -g window-style 'bg=colour239'
@@ -86,6 +84,9 @@ set -w -g window-status-style 'fg=#828b93,bg=#2d2d2d'
 # Content of the right part of the status bar.
 set -g status-right '#([ $(cat /sys/class/power_supply/AC1/online) -eq 1 ] && echo -n  || echo -n ; [ -n $(find /sys/class/power_supply/ -name 'BAT*' | head -n 1) ] && echo $(cat $(find /sys/class/power_supply/ -name 'BAT*' | head -n 1)/capacity)% || echo)'
 
+# setw -g window-status-current-format '#{pane_current_command}'
+# setw -g window-status-format '#{pane_current_command}'
+
 #-------------
 # Clipboard
 #-------------
@@ -101,4 +102,6 @@ bind-key -n M-J resize-pane -D 1
 bind-key -n M-H resize-pane -L 1
 bind-key -n M-L resize-pane -R 1
 
-set -g escape-time 0
+# set 0 は wsl2 と相性が悪い (https://github.com/microsoft/WSL/issues/5931)
+set -g escape-time 50
+set-option -g focus-events on
