--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -94,8 +94,9 @@ set -g status-right '#([ $(cat /sys/class/power_supply/AC1/online) -eq 1 ] && ec
 # コピーモードをvimキーバインドで
 set-window-option -g mode-keys vi
 bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi V send-keys -X select-line
 bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "win32yank.exe -i"
-bind p run-shell 'win32yank.exe -o | xargs -0 -I{} tmux set-buffer -- {} && tmux paste-buffer'
+bind p run-shell 'win32yank.exe -o | xargs -0 -I{} tmux set-buffer -- {} && tmux paste-buffer -p'
 
 bind-key -n M-K resize-pane -U 1
 bind-key -n M-J resize-pane -D 1
