--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -84,8 +84,10 @@ set -w -g window-status-style 'fg=#828b93,bg=#2d2d2d'
 # Content of the right part of the status bar.
 set -g status-right '#([ $(cat /sys/class/power_supply/AC1/online) -eq 1 ] && echo -n  || echo -n ; [ -n $(find /sys/class/power_supply/ -name 'BAT*' | head -n 1) ] && echo $(cat $(find /sys/class/power_supply/ -name 'BAT*' | head -n 1)/capacity)% || echo)'
 
-# setw -g window-status-current-format '#{pane_current_command}'
-# setw -g window-status-format '#{pane_current_command}'
+# set -g status-left "#[fg=#ffffff,bg=#8b6b38] #S "
+
+setw -g window-status-current-format '#I:#{pane_current_command}'
+setw -g window-status-format '#I:#{pane_current_command}'
 
 #-------------
 # Clipboard
@@ -93,15 +95,15 @@ set -g status-right '#([ $(cat /sys/class/power_supply/AC1/online) -eq 1 ] && ec
 
 # コピーモードをvimキーバインドで
 set-window-option -g mode-keys vi
-bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi V send-keys -X select-line
-bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "win32yank.exe -i"
-bind p run-shell 'win32yank.exe -o | xargs -0 -I{} tmux set-buffer -- {} && tmux paste-buffer -p'
+bind -T copy-mode-vi v send-keys -X begin-selection
+bind -T copy-mode-vi V send-keys -X select-line
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "win32yank.exe -i"
+bind p run-shell 'win32yank.exe -o --lf | xargs -0 -I{} tmux set-buffer -- {} && tmux paste-buffer -p'
 
-bind-key -n M-K resize-pane -U 1
-bind-key -n M-J resize-pane -D 1
-bind-key -n M-H resize-pane -L 1
-bind-key -n M-L resize-pane -R 1
+bind -n M-K resize-pane -U 1
+bind -n M-J resize-pane -D 1
+bind -n M-H resize-pane -L 1
+bind -n M-L resize-pane -R 1
 
 # set 0 は wsl2 と相性が悪い (https://github.com/microsoft/WSL/issues/5931)
 set -g escape-time 50
