--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -82,7 +82,7 @@ set -w -g window-status-current-style 'fg=#ffffff,bg=#000000'
 # Inactive window's style.
 set -w -g window-status-style 'fg=#828b93,bg=#2d2d2d'
 # Content of the right part of the status bar.
-set -g status-right '#([ $(cat /sys/class/power_supply/AC1/online) -eq 1 ] && echo -n  || echo -n ; [ -n $(find /sys/class/power_supply/ -name 'BAT*' | head -n 1) ] && echo $(cat $(find /sys/class/power_supply/ -name 'BAT*' | head -n 1)/capacity)% || echo)'
+set -g status-right '#([ $(cat /sys/class/power_supply/AC1/online) -eq 1 ] && echo -n  || echo -n 󰁹; [ -n $(find /sys/class/power_supply/ -name 'BAT*' | head -n 1) ] && echo $(cat $(find /sys/class/power_supply/ -name 'BAT*' | head -n 1)/capacity)% || echo)'
 
 # set -g status-left "#[fg=#ffffff,bg=#8b6b38] #S "
 
