alt への依存を解消

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -19,7 +19,6 @@
 #   - `set-option -w`
 #
 
-
 # Use 256 colors
 # set -g default-terminal 'xterm-256color'
 # set -g terminal-overrides 'xterm:colors=256'
@@ -40,14 +39,17 @@ if-shell '[ $TERM = xterm-256color ]' {
 set -s extended-keys always
 set -as terminal-features 'extkeys'
 
-# Select active pane by vim-like key bind
-bind -n M-h select-pane -L
-bind -n M-j select-pane -D
-bind -n M-k select-pane -U
-bind -n M-l select-pane -R
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+bind H resize-pane -L 1
+bind J resize-pane -D 1
+bind K resize-pane -U 1
+bind L resize-pane -R 1
 
-bind -n M-n if-shell -F '#{<:#{p-4:#{pane_width}},#{p-4:#{e|*|:2,#{pane_height}}}}' 'split-window -v -c "#{pane_current_path}"' 'split-window -h -c "#{pane_current_path}"'
-bind -n M-m 'new-window'
+bind \\ if-shell -F '#{<:#{p-4:#{pane_width}},#{p-4:#{e|*|:2,#{pane_height}}}}' 'split-window -v -c "#{pane_current_path}"' 'split-window -h -c "#{pane_current_path}"'
+bind ] new-window
 
 # Use mouse
 set -g mouse on
@@ -82,7 +84,7 @@ set -w -g window-status-current-style 'fg=#ffffff,bg=#000000'
 # Inactive window's style.
 set -w -g window-status-style 'fg=#828b93,bg=#2d2d2d'
 # Content of the right part of the status bar.
-set -g status-right '#([ $(cat /sys/class/power_supply/AC1/online) -eq 1 ] && echo -n  || echo -n 󰁹; [ -n $(find /sys/class/power_supply/ -name 'BAT*' | head -n 1) ] && echo $(cat $(find /sys/class/power_supply/ -name 'BAT*' | head -n 1)/capacity)% || echo)'
+set -g status-right ''
 
 # set -g status-left "#[fg=#ffffff,bg=#8b6b38] #S "
 
@@ -97,13 +99,11 @@ setw -g window-status-format '#I:#{pane_current_command}'
 set-window-option -g mode-keys vi
 bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi V send-keys -X select-line
-bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "win32yank.exe -i"
-bind p run-shell 'win32yank.exe -o --lf | xargs -0 -I{} tmux set-buffer -- {} && tmux paste-buffer -p'
 
-bind -n M-K resize-pane -U 1
-bind -n M-J resize-pane -D 1
-bind -n M-H resize-pane -L 1
-bind -n M-L resize-pane -R 1
+if-shell "which win32yank.exe" {
+    bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "win32yank.exe -i"
+    bind p run-shell 'tmux set-buffer -- "$(win32yank.exe -o --lf)" && tmux paste-buffer -p'
+}
 
 # set 0 は wsl2 と相性が悪い (https://github.com/microsoft/WSL/issues/5931)
 set -g escape-time 50
