alt の依存を復活 (glazewm に zellij でいう lock モードが設定できたので)

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -39,17 +39,17 @@ if-shell '[ $TERM = xterm-256color ]' {
 set -s extended-keys always
 set -as terminal-features 'extkeys'
 
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-bind H resize-pane -L 1
-bind J resize-pane -D 1
-bind K resize-pane -U 1
-bind L resize-pane -R 1
+bind -n M-h select-pane -L
+bind -n M-j select-pane -D
+bind -n M-k select-pane -U
+bind -n M-l select-pane -R
+bind -n M-H resize-pane -L 1
+bind -n M-J resize-pane -D 1
+bind -n M-K resize-pane -U 1
+bind -n M-L resize-pane -R 1
 
-bind \\ if-shell -F '#{<:#{p-4:#{pane_width}},#{p-4:#{e|*|:2,#{pane_height}}}}' 'split-window -v -c "#{pane_current_path}"' 'split-window -h -c "#{pane_current_path}"'
-bind ] new-window
+bind -n M-n if-shell -F '#{<:#{p-4:#{pane_width}},#{p-4:#{e|*|:2,#{pane_height}}}}' 'split-window -v -c "#{pane_current_path}"' 'split-window -h -c "#{pane_current_path}"'
+bind -n M-m new-window
 
 # Use mouse
 set -g mouse on
