--- a/tmux/.config/tmux/.tmux.conf
+++ b/tmux/.config/tmux/.tmux.conf
@@ -78,18 +78,24 @@ set -g status on
 # Position of the status bar.
 set -g status-position top
 # Style of status bar.
-set -g status-style 'bg=#2d2d2d'
+set -g status-style 'bg=black'
 # Active window's style.
-set -w -g window-status-current-style 'fg=#ffffff,bg=#000000'
+set -g window-status-current-style 'fg=white,bg=black'
 # Inactive window's style.
-set -w -g window-status-style 'fg=#828b93,bg=#2d2d2d'
+set -g window-status-style 'fg=#828b93,bg=#2d2d2d'
 # Content of the right part of the status bar.
-set -g status-right ''
+# set -g status-right ''
 
 # set -g status-left "#[fg=#ffffff,bg=#8b6b38] #S "
 
+set -g status-right  "\
+#{?client_prefix,#[reverse]P#[noreverse],}\
+#[bg=black]#[fg=white] #(whoami)@#h \
+"
+
 setw -g window-status-current-format '#I:#{pane_current_command}'
 setw -g window-status-format '#I:#{pane_current_command}'
+
 
 #-------------
 # Clipboard
