starship : change error symbol

--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -90,6 +90,7 @@ add_newline = false
 
 [character]
 success_symbol = '[>](bold green)'
+error_symbol = '[>](bold red)'
 
 [username]
 show_always = true
