tmux : impl lock mode

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -114,3 +114,16 @@ if-shell "which win32yank.exe" {
 # set 0 は wsl2 と相性が悪い (https://github.com/microsoft/WSL/issues/5931)
 set -g escape-time 50
 set-option -g focus-events on
+
+bind -n C-g run "\
+    tmux list-keys > /tmp/tmux-keys.txt;\
+    for table in prefix root copy-mode copy-mode-vi; do\
+        tmux unbind -a -T \"\$table\";\
+    done;\
+    current_status_right=\$(tmux show -gqv status-right);\
+    tmux set -g status-right \"#[bg=yellow]LOCK#[default]\$current_status_right\";\
+    tmux bind -n C-g run \"\
+        tmux source /tmp/tmux-keys.txt;\
+        tmux set -g status-right \\\"\$current_status_right\\\";\
+    \"\
+"
