--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -56,6 +56,14 @@
     bindsym $mod+Shift+9 move container to workspace number 9
     bindsym $mod+Shift+0 move container to workspace number 10
 
+    input type:keyboard {
+        xkb_layout jp
+        xkb_options ctrl:swapcaps
+    }
+    input type:touchpad {
+        tap enabled
+        natural_scroll enabled
+    }
 
 bar {
     swaybar_command waybar
