sway : add kill shortcut

--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -15,6 +15,7 @@
     bindsym $mod+Return exec $menu
     bindsym $mod+Shift+c reload
     bindsym $mod+Shift+e exec swaynag -t warning -m 'You pressed the exit shortcut. Do you really want to exit sway? This will end your Wayland session.' -B 'Yes, exit sway' 'swaymsg exit'
+    bindsym $mod+Shift+q kill
 
 #
 # Moving around:
