--- a/waybar/.config/waybar/config
+++ b/waybar/.config/waybar/config
@@ -30,6 +30,7 @@
         "format-icons": ["󰛩 ", "󱩎 ", "󱩏 ", "󱩐 ", "󱩑 ", "󱩒 ", "󱩓 ", "󱩔 ", "󱩕 ", "󱩖 ", "󰛨 "],
         "tooltip": true,
         "tooltip-format": "{percent}%",
+        "scroll-step": 0.1
     },
     "battery": {
         "format": "{icon}",
@@ -46,8 +47,8 @@
     },
     "pulseaudio": {
         "format": "{icon}",
-        "format-bluetooth": "󰂰 {volume}%",
-        "format-muted": "󰖁 {volume}%",
+        "format-bluetooth": "󰂰 ",
+        "format-muted": "󰖁 ",
         "format-icons": {
             "headphones": "",
             "handsfree": "",
@@ -57,6 +58,10 @@
             "car": " ",
             "default": [" ", " ", "󰕾 ", " "],
         },
-        "on-click": "pavucontrol"
+        "on-click-right": "pavucontrol",
+        "reverse-scrolling": true,
+        "tooltip": true,
+        "tooltip-format": "{volume}%"
+
     }
 }
