--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -104,10 +104,32 @@
 ### Output
     output * {
         background $(find ~/Pictures/wallpapers -type f | shuf -n 1) fill
+        scale 1.5
     }
     bar {
         swaybar_command waybar
     }
+
+### Floating window
+#
+# General
+#
+    for_window [window_role = "pop-up"] floating enable
+    for_window [window_role = "bubble"] floating enable
+    for_window [window_role = "dialog"] floating enable
+    for_window [window_type = "dialog"] floating enable
+    for_window [window_role = "task_dialog"] floating enable
+    for_window [window_type = "menu"] floating enable
+    for_window [app_id = "floating"] floating enable
+    for_window [app_id = "floating_update"] floating enable, resize set width 1000px height 600px
+    for_window [class = "(?i)pinentry"] floating enable
+    for_window [title = "Administrator privileges required"] floating enable
+#
+# Firefox
+#
+    for_window [title = "About Mozilla Firefox"] floating enable
+    for_window [window_role = "About"] floating enable
+    for_window [app_id="firefox" title="Library"] floating enable, border pixel 1, sticky enable
 
 ### Tools
     exec fcitx5
