hypr : set wallpaper

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -183,3 +183,4 @@ submap = reset
 exec-once = waybar -c ~/.config/waybar/config-hypr
 exec-once = mako
 exec-once = fcitx5
+exec-once = swaybg -i $(find ~/Pictures/wallpapers -type f | shuf -n 1) -m fill
