--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -96,7 +96,8 @@ master {
 
 gestures {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    workspace_swipe = false
+    workspace_swipe = true
+    workspace_swipe_fingers = 4
 }
 
 # Example per-device config
