hypr : toggle wofi

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -120,7 +120,7 @@ $mainMod = ALT
 bind = $mainMod SHIFT, Q, killactive,
 bind = $mainMod SHIFT, E, exit,
 bind = $mainMod, V, togglefloating,
-bind = $mainMod, SPACE, exec, wofi
+bind = $mainMod, SPACE, exec, pkill wofi || wofi
 bind = $mainMod, P, pseudo, # dwindle
 # bind = $mainMod, J, togglesplit, # dwindle
 
