starship : use nerd icon for read_only symbol

--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -89,6 +89,10 @@ $cmd_duration\
 
 add_newline = false
 
+[directory]
+format = '[$path]($style) [$read_only]($read_only_style)'
+read_only = ' '
+
 [character]
 success_symbol = '[>](bold green)'
 error_symbol = '[>](bold red)'
