--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -21,16 +21,19 @@ monitor=,preferred,auto,auto
 
 # Some default env vars.
 env = XCURSOR_SIZE,24
+env = GTM_IM_MODULE,fcitx
+env = QT_IM_MODULE,fcitx
+env = XMODIFIERS,@im=fcitx
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
-    kb_layout = jp
+    kb_layout = jp,us
     kb_variant =
     kb_model =
-    kb_options = ctrl:swapcaps
+    kb_options = ctrl:swapcaps,grp:alt_shift_toggle
     kb_rules =
 
-    follow_mouse = 1
+    follow_mouse = 2
 
     touchpad {
         natural_scroll = true
@@ -43,7 +46,7 @@ general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
     gaps_in = 5
-    gaps_out = 20
+    gaps_out = 10
     border_size = 2
     col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.inactive_border = rgba(595959aa)
@@ -69,18 +72,18 @@ decoration {
 }
 
 animations {
-    enabled = true
+    enabled = false
 
     # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
 
-    animation = windows, 1, 7, myBezier
-    animation = windowsOut, 1, 7, default, popin 80%
-    animation = border, 1, 10, default
+    animation = windows, 1, 2, myBezier
+    animation = windowsOut, 1, 2, default, popin 80%
+    animation = border, 1, 2, default
     animation = borderangle, 1, 8, default
-    animation = fade, 1, 7, default
-    animation = workspaces, 1, 6, default
+    animation = fade, 1, 3, default
+    animation = workspaces, 1, 2, default
 }
 
 dwindle {
@@ -111,7 +114,11 @@ device:epic-mouse-v1 {
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-
+windowrule = float,title:^(Open)$
+windowrule = float,title:^(Choose Files)$
+windowrule = float,title:^(Save As)$
+windowrule = float,title:^(Confirm to replace files)$
+windowrule = float,title:^(File Operation Progress)$
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = ALT
@@ -175,13 +182,23 @@ bind = , XF86AudioPrev, exec, playerctl previous
 binde = , XF86MonBrightnessDown, exec, brightnessctl set 1%-
 binde = , XF86MonBrightnessUp, exec, brightnessctl set 1%+
 
+# Screen shot
+bind = $mainMod SHIFT, S, exec, grim -g "$(slurp)" - | wl-copy
+
+# Reload Waybar
+bind = $mainMod, R, exec, killall waybar; waybar -c ~/.config/waybar/config-hypr & disown
+
+# Terminal
+bind = $mainMod, Q, exec, alacritty
+
 # Lock mode
-bind = $mainMod, g, submap, lock
-submap = lock
+bind = $mainMod, g, submap, LOCK
+submap = LOCK
 bind = $mainMod, g, submap, reset
 submap = reset
 
 exec-once = waybar -c ~/.config/waybar/config-hypr
 exec-once = mako
 exec-once = fcitx5
-exec-once = swaybg -i $(find ~/Pictures/wallpapers -type f | shuf -n 1) -m fill
+exec-once = copyq --start-server
+exec-once = hyprpaper
