--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -73,6 +73,8 @@ $env_var\
 $crystal\
 $custom\
 $sudo\
+$status\
+$cmd_duration\
 $line_break\
 $jobs\
 $battery\
@@ -80,11 +82,10 @@ $time\
 $os\
 $container\
 $shell\
-$character"""
+$character
+"""
 
 right_format = """
-$status\
-$cmd_duration\
 """
 
 add_newline = false
@@ -110,7 +111,7 @@ format = '[󰚭$duration](gray)'
 [sudo]
 style = 'red'
 format = '[$symbol]($style)'
-symbol = '󰘶'
+symbol = '󰘶 '
 disabled = false
 
 [status]
@@ -125,3 +126,6 @@ style='bold fg:39'
 
 [python]
 symbol = '󰌠 '
+
+[rust]
+symbol = '󱘗 '
