--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -27,16 +27,20 @@ env = XMODIFIERS,@im=fcitx
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
-    kb_layout = jp,us
+    # kb_layout = jp,us
+    kb_layout = us,jp
     kb_variant =
     kb_model =
-    kb_options = ctrl:swapcaps,grp:alt_shift_toggle
+    # Push both alt keys together
+    # kb_options = grp:alts_toggle,ctrl:swapcaps
+    kb_options = grp:alts_toggle
     kb_rules =
 
-    follow_mouse = 2
+    follow_mouse = 0
 
     touchpad {
         natural_scroll = true
+        disable_while_typing = true
     }
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
@@ -50,6 +54,7 @@ general {
     border_size = 2
     col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.inactive_border = rgba(595959aa)
+    resize_on_border = true
 
     layout = dwindle
 }
@@ -101,6 +106,10 @@ gestures {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
     workspace_swipe = true
     workspace_swipe_fingers = 4
+}
+
+misc {
+    force_default_wallpaper = 0
 }
 
 # Example per-device config
@@ -167,9 +176,16 @@ bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
+bind = $mainMod CONTROL, k, workspace, +1
+bind = $mainMod CONTROL, j, workspace, -1
+
+binde = $mainMod, Minus, splitratio, -0.1
+binde = $mainMod, Equal, splitratio, +0.1
+
 # Move/resize windows with mainMod + LMB/RMB and dragging
+# Left click: mouse:272
+# Right click: mouse:273
 bindm = $mainMod, mouse:272, movewindow
-bindm = $mainMod, mouse:273, resizewindow
 
 # Special keys
 binde = , XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 1%+
@@ -201,4 +217,4 @@ exec-once = waybar -c ~/.config/waybar/config-hypr
 exec-once = mako
 exec-once = fcitx5
 exec-once = copyq --start-server
-exec-once = hyprpaper
+# exec-once = hyprpaper
