--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -24,19 +24,19 @@ env = XCURSOR_SIZE,24
 env = GTM_IM_MODULE,fcitx
 env = QT_IM_MODULE,fcitx
 env = XMODIFIERS,@im=fcitx
+env = CHROME_USER_FLAGS,--gtk-version=4
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
-    # kb_layout = jp,us
-    kb_layout = us,jp
     kb_variant =
     kb_model =
-    # Push both alt keys together
-    # kb_options = grp:alts_toggle,ctrl:swapcaps
+    kb_layout = us,jp
     kb_options = grp:alts_toggle
+    # kb_layout = jp,us
+    # kb_options = grp:alts_toggle,ctrl:swapcaps
     kb_rules =
 
-    follow_mouse = 0
+    follow_mouse = 2
 
     touchpad {
         natural_scroll = true
@@ -131,13 +131,17 @@ windowrule = float,title:^(File Operation Progress)$
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = ALT
+$mainModL = Alt_L
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod SHIFT, Q, killactive,
+# bind = $mainMod SHIFT, Q, killactive,
+bind = $mainMod, F4, killactive,
 bind = $mainMod SHIFT, E, exit,
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, SPACE, exec, pkill wofi || wofi
 bind = $mainMod, P, pseudo, # dwindle
+
+bind = $mainMod,TAB, workspace, previous
 # bind = $mainMod, J, togglesplit, # dwindle
 
 # Move focus with vim-like keys
@@ -204,14 +208,19 @@ bind = $mainMod SHIFT, S, exec, grim -g "$(slurp)" - | wl-copy
 # Reload Waybar
 bind = $mainMod, R, exec, killall waybar; waybar -c ~/.config/waybar/config-hypr & disown
 
-# Terminal
+# Launch
 bind = $mainMod, Q, exec, alacritty
+bind = $mainMod, E, exec, thunar
 
 # Lock mode
 bind = $mainMod, g, submap, LOCK
 submap = LOCK
 bind = $mainMod, g, submap, reset
 submap = reset
+
+# Tab
+bind = $mainMod, T, togglegroup
+bind = $mainMod, N, changegroupactive
 
 exec-once = waybar -c ~/.config/waybar/config-hypr
 exec-once = mako
