--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -28,11 +28,11 @@ if-shell '[ $TERM = mintty ]' {
 }
 if-shell '[ $TERM = alacritty ]' {
     set -g default-terminal 'tmux-256color'
-    set -ag terminal-overrides ',alacritty:RGB'
+    set -ag terminal-overrides ',alacritty:Tc'
 }
 if-shell '[ $TERM = xterm-256color ]' {
     set -g default-terminal 'tmux-256color'
-    set -ag terminal-overrides ',xterm-256color:RGB'
+    set -ag terminal-overrides ',xterm-256color:Tc'
 }
 
 
@@ -78,9 +78,9 @@ set -g status on
 # Position of the status bar.
 set -g status-position top
 # Style of status bar.
-set -g status-style 'bg=black'
+set -g status-style 'bg=default'
 # Active window's style.
-set -g window-status-current-style 'fg=white,bg=black'
+set -g window-status-current-style 'fg=white,bg=default'
 # Inactive window's style.
 set -g window-status-style 'fg=#828b93,bg=#2d2d2d'
 # Content of the right part of the status bar.
@@ -90,7 +90,7 @@ set -g window-status-style 'fg=#828b93,bg=#2d2d2d'
 
 set -g status-right  "\
 #{?client_prefix,#[reverse]P#[noreverse],}\
-#[bg=black]#[fg=white] #(whoami)@#h \
+#[bg=default]#[fg=white] #(whoami)@#h \
 "
 
 setw -g window-status-current-format '#I:#{pane_current_command}'
@@ -108,7 +108,7 @@ bind -T copy-mode-vi V send-keys -X select-line
 
 if-shell "which win32yank.exe" {
     bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "win32yank.exe -i"
-    bind p run-shell 'tmux set-buffer -- "$(win32yank.exe -o --lf)" && tmux paste-buffer -p'
+    bind ] run-shell 'tmux set-buffer -- "$(win32yank.exe -o --lf)" && tmux paste-buffer -p'
 }
 
 # set 0 は wsl2 と相性が悪い (https://github.com/microsoft/WSL/issues/5931)
