--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -30,8 +30,8 @@ env = CHROME_USER_FLAGS,--gtk-version=4
 input {
     kb_variant =
     kb_model =
-    kb_layout = us,jp
-    kb_options = grp:alts_toggle
+    kb_layout = jp,us
+    # kb_options = grp:alts_toggle
     # kb_layout = jp,us
     # kb_options = grp:alts_toggle,ctrl:swapcaps
     kb_rules =
@@ -70,10 +70,9 @@ decoration {
         passes = 1
     }
 
-    drop_shadow = true
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
+    shadow {
+      color = rgba(1a1a1aee)
+    }
 }
 
 animations {
@@ -99,7 +98,7 @@ dwindle {
 
 master {
     # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-    new_is_master = true
+    new_status = master
 }
 
 gestures {
@@ -114,7 +113,8 @@ misc {
 
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
-device:epic-mouse-v1 {
+device {
+    name = epic-mouse-v1
     sensitivity = -0.5
 }
 
@@ -130,8 +130,8 @@ windowrule = float,title:^(Confirm to replace files)$
 windowrule = float,title:^(File Operation Progress)$
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
-$mainMod = ALT
-$mainModL = Alt_L
+$mainMod = SUPER
+$mainModL = SUPER_LEFT
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 # bind = $mainMod SHIFT, Q, killactive,
@@ -169,16 +169,16 @@ bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = $mainMod SHIFT, 1, movetoworkspace, 1
-bind = $mainMod SHIFT, 2, movetoworkspace, 2
-bind = $mainMod SHIFT, 3, movetoworkspace, 3
-bind = $mainMod SHIFT, 4, movetoworkspace, 4
-bind = $mainMod SHIFT, 5, movetoworkspace, 5
-bind = $mainMod SHIFT, 6, movetoworkspace, 6
-bind = $mainMod SHIFT, 7, movetoworkspace, 7
-bind = $mainMod SHIFT, 8, movetoworkspace, 8
-bind = $mainMod SHIFT, 9, movetoworkspace, 9
-bind = $mainMod SHIFT, 0, movetoworkspace, 10
+bind = $mainMod CONTROL, 1, movetoworkspacesilent, 1
+bind = $mainMod CONTROL, 2, movetoworkspacesilent, 2
+bind = $mainMod CONTROL, 3, movetoworkspacesilent, 3
+bind = $mainMod CONTROL, 4, movetoworkspacesilent, 4
+bind = $mainMod CONTROL, 5, movetoworkspacesilent, 5
+bind = $mainMod CONTROL, 6, movetoworkspacesilent, 6
+bind = $mainMod CONTROL, 7, movetoworkspacesilent, 7
+bind = $mainMod CONTROL, 8, movetoworkspacesilent, 8
+bind = $mainMod CONTROL, 9, movetoworkspacesilent, 9
+bind = $mainMod CONTROL, 0, movetoworkspacesilent, 10
 
 bind = $mainMod CONTROL, k, workspace, +1
 bind = $mainMod CONTROL, j, workspace, -1
