--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -54,8 +54,8 @@ bind -n M-m new-window
 # Use mouse
 set -g mouse on
 
-set -g prefix C-q
-bind-key C-q send-prefix
+# set -g prefix C-q
+# bind-key C-q send-prefix
 setw -g aggressive-resize on
 
 # アクティブなペインと非アクティブなペインで色を変える
@@ -89,7 +89,7 @@ set -g window-status-style 'fg=#828b93,bg=#2d2d2d'
 # set -g status-left "#[fg=#ffffff,bg=#8b6b38] #S "
 
 set -g status-right  "\
-#{?client_prefix,#[reverse]P#[noreverse],}\
+#{?client_prefix,#[reverse]PREFIX#[noreverse],}\
 #[bg=default]#[fg=white] #(whoami)@#h \
 "
 
@@ -106,9 +106,16 @@ set-window-option -g mode-keys vi
 bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi V send-keys -X select-line
 
+
 if-shell "which win32yank.exe" {
     bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "win32yank.exe -i"
     bind ] run-shell 'tmux set-buffer -- "$(win32yank.exe -o --lf)" && tmux paste-buffer -p'
+}
+
+if-shell "which copyq" {
+    bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "copyq add -"
+    bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "copyq add -"
+    bind ] run-shell 'copyq paste | tmux load-buffer - && tmux paste-buffer'
 }
 
 # set 0 は wsl2 と相性が悪い (https://github.com/microsoft/WSL/issues/5931)
@@ -121,7 +128,7 @@ bind -n C-g run "\
         tmux unbind -a -T \"\$table\";\
     done;\
     current_status_right=\$(tmux show -gqv status-right);\
-    tmux set -g status-right \"#[bg=yellow]LOCK#[default]\$current_status_right\";\
+    tmux set -g status-right \"#[bg=blue]LOCK#[default]\$current_status_right\";\
     tmux bind -n C-g run \"\
         tmux source /tmp/tmux-keys.txt;\
         tmux set -g status-right \\\"\$current_status_right\\\";\
