--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -209,7 +209,7 @@ bind = $mainMod SHIFT, S, exec, grim -g "$(slurp)" - | wl-copy
 bind = $mainMod, R, exec, killall waybar; waybar -c ~/.config/waybar/config-hypr & disown
 
 # Launch
-bind = $mainMod, Q, exec, alacritty
+bind = $mainMod, Q, exec, foot
 bind = $mainMod, E, exec, thunar
 
 # Lock mode
