--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -102,9 +102,8 @@ master {
 }
 
 gestures {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    workspace_swipe = true
-    workspace_swipe_fingers = 4
+    gesture = 4, left, workspace, r-1
+    gesture = 4, right, workspace, r+1
 }
 
 misc {
