--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -128,6 +128,10 @@ windowrule = float,title:^(Save As)$
 windowrule = float,title:^(Confirm to replace files)$
 windowrule = float,title:^(File Operation Progress)$
 
+windowrulev2 = float, title:^(Kiten)$
+windowrulev2 = size 40% 20%, title:^(Kiten)$
+windowrulev2 = center, title:^(Kiten)$
+
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
 $mainModL = SUPER_LEFT
@@ -137,7 +141,7 @@ $mainModL = SUPER_LEFT
 bind = $mainMod, F4, killactive,
 bind = $mainMod SHIFT, E, exit,
 bind = $mainMod, V, togglefloating,
-bind = $mainMod, SPACE, exec, pkill wofi || wofi
+bind = $mainMod, SPACE, exec, pkill -f ~/.config/hypr/tools/kiten/kiten.sh || foot --title Kiten ~/.config/hypr/tools/kiten/kiten.sh
 bind = $mainMod, P, pseudo, # dwindle
 
 bind = $mainMod,TAB, workspace, previous
